Rerun analyses for misinfotext

--- a/named_entity_recognition.ipynb
+++ b/named_entity_recognition.ipynb
@@ -208,6 +208,10 @@
     "    sheet_name=using_dataset[\"sheet_name\"], \n",
     "    usecols=using_dataset[\"usecols\"]\n",
     ")\n",
+    "\n",
+    "# Removing 2007 and 2008 years because little data in them\n",
+    "dataset_df = dataset_df[~(dataset_df[using_dataset[\"year_col\"]] == 2007) & ~(dataset_df[using_dataset[\"year_col\"]] == 2008)]\n",
+    "\n",
     "dataset_df.head()"
    ]
   },
@@ -249,6 +253,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "c:\\Users\\Adam\\AppData\\Local\\Python\\pythoncore-3.11-64\\Lib\\site-packages\\spacy\\util.py:969: UserWarning: [W095] Model 'en_core_web_lg' (3.5.0) was trained with spaCy v3.5.0 and may not be 100% compatible with the current version (3.8.8). If you see errors or degraded performance, download a newer compatible model or retrain your custom model with the current spaCy version. For more details and available updates, run: python -m spacy validate\n",
+      "  warnings.warn(warn_msg)\n",
       "c:\\Users\\Adam\\AppData\\Local\\Python\\pythoncore-3.11-64\\Lib\\site-packages\\coreferee\\manager.py:11: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
       "  import pkg_resources\n"
      ]
@@ -851,83 +857,90 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>jerk</td>\n",
+       "      <th>434</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>abortion</td>\n",
        "      <td>None</td>\n",
-       "      <td>497332</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q497332</td>\n",
-       "      <td>(surge)</td>\n",
-       "      <td>surge</td>\n",
-       "      <td>2</td>\n",
+       "      <td>8452</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q8452</td>\n",
+       "      <td>(abortions)</td>\n",
+       "      <td>abortions</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>withdrawal</td>\n",
+       "      <th>434</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>invoice</td>\n",
        "      <td>None</td>\n",
-       "      <td>1760704</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q1760704</td>\n",
-       "      <td>(withdrawal)</td>\n",
-       "      <td>withdrawal</td>\n",
-       "      <td>2</td>\n",
+       "      <td>190581</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q190581</td>\n",
+       "      <td>(bill)</td>\n",
+       "      <td>bill</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
+       "      <th>443</th>\n",
+       "      <td>2009</td>\n",
        "      <td>Press release</td>\n",
-       "      <td>Bill Clinton</td>\n",
-       "      <td>PERSON</td>\n",
-       "      <td>1124</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q1124</td>\n",
-       "      <td>(Clinton)</td>\n",
-       "      <td>Clinton</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>troop</td>\n",
+       "      <td>Barack Obama</td>\n",
        "      <td>None</td>\n",
-       "      <td>1080137</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q1080137</td>\n",
-       "      <td>(troops)</td>\n",
-       "      <td>troops</td>\n",
-       "      <td>2</td>\n",
+       "      <td>76</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q76</td>\n",
+       "      <td>(President, Obama)</td>\n",
+       "      <td>President Obama</td>\n",
+       "      <td>29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>Iraq</td>\n",
+       "      <th>434</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>United States of America</td>\n",
        "      <td>GPE</td>\n",
-       "      <td>796</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q796</td>\n",
-       "      <td>(Iraq)</td>\n",
-       "      <td>Iraq</td>\n",
-       "      <td>2</td>\n",
+       "      <td>30</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q30</td>\n",
+       "      <td>(America)</td>\n",
+       "      <td>America</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>446</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>percent</td>\n",
+       "      <td>PERCENT</td>\n",
+       "      <td>11229</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q11229</td>\n",
+       "      <td>(%)</td>\n",
+       "      <td>%</td>\n",
+       "      <td>21</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     year           type        Entity     tag  Wikidata_id  \\\n",
-       "428  2007  Press release          jerk    None       497332   \n",
-       "428  2007  Press release    withdrawal    None      1760704   \n",
-       "428  2007  Press release  Bill Clinton  PERSON         1124   \n",
-       "428  2007  Press release         troop    None      1080137   \n",
-       "428  2007  Press release          Iraq     GPE          796   \n",
+       "     year           type                    Entity      tag  Wikidata_id  \\\n",
+       "434  2009  News and blog                  abortion     None         8452   \n",
+       "434  2009  News and blog                   invoice     None       190581   \n",
+       "443  2009  Press release              Barack Obama     None           76   \n",
+       "434  2009  News and blog  United States of America      GPE           30   \n",
+       "446  2009  News and blog                   percent  PERCENT        11229   \n",
        "\n",
-       "                               Wikidata_url          Span   Span_text  Count  \n",
-       "428   https://www.wikidata.org/wiki/Q497332       (surge)       surge      2  \n",
-       "428  https://www.wikidata.org/wiki/Q1760704  (withdrawal)  withdrawal      2  \n",
-       "428     https://www.wikidata.org/wiki/Q1124     (Clinton)     Clinton      2  \n",
-       "428  https://www.wikidata.org/wiki/Q1080137      (troops)      troops      2  \n",
-       "428      https://www.wikidata.org/wiki/Q796        (Iraq)        Iraq      2  "
+       "                              Wikidata_url                Span  \\\n",
+       "434    https://www.wikidata.org/wiki/Q8452         (abortions)   \n",
+       "434  https://www.wikidata.org/wiki/Q190581              (bill)   \n",
+       "443      https://www.wikidata.org/wiki/Q76  (President, Obama)   \n",
+       "434      https://www.wikidata.org/wiki/Q30           (America)   \n",
+       "446   https://www.wikidata.org/wiki/Q11229                 (%)   \n",
+       "\n",
+       "           Span_text  Count  \n",
+       "434        abortions     39  \n",
+       "434             bill     38  \n",
+       "443  President Obama     29  \n",
+       "434          America     21  \n",
+       "446                %     21  "
       ]
      },
      "execution_count": 15,
@@ -979,39 +992,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
+       "      <th>433</th>\n",
+       "      <td>2009</td>\n",
        "      <td>Press release</td>\n",
-       "      <td>The Statement</td>\n",
+       "      <td>Barack Obama</td>\n",
        "      <td>None</td>\n",
-       "      <td>1272835</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q1272835</td>\n",
-       "      <td>(Statement)</td>\n",
-       "      <td>Statement</td>\n",
-       "      <td>1</td>\n",
+       "      <td>76</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q76</td>\n",
+       "      <td>(Obama)</td>\n",
+       "      <td>Obama</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
+       "      <th>443</th>\n",
+       "      <td>2009</td>\n",
        "      <td>Press release</td>\n",
-       "      <td>John McCain</td>\n",
-       "      <td>PERSON</td>\n",
-       "      <td>10390</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q10390</td>\n",
-       "      <td>(John, McCain)</td>\n",
-       "      <td>John McCain</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Stimulus</td>\n",
+       "      <td>None</td>\n",
+       "      <td>3559147</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q3559147</td>\n",
+       "      <td>(Stimulus)</td>\n",
+       "      <td>Stimulus</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>2007</td>\n",
+       "      <th>450</th>\n",
+       "      <td>2009</td>\n",
        "      <td>Press release</td>\n",
-       "      <td>Hillary Clinton</td>\n",
-       "      <td>PERSON</td>\n",
-       "      <td>6294</td>\n",
-       "      <td>https://www.wikidata.org/wiki/Q6294</td>\n",
-       "      <td>(Hillary, Clinton)</td>\n",
-       "      <td>Hillary Clinton</td>\n",
+       "      <td>AARP</td>\n",
+       "      <td>ORG</td>\n",
+       "      <td>463410</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q463410</td>\n",
+       "      <td>(AARP)</td>\n",
+       "      <td>AARP</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>445</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>USS Constitution</td>\n",
+       "      <td>LAW</td>\n",
+       "      <td>944436</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q944436</td>\n",
+       "      <td>(Constitution)</td>\n",
+       "      <td>Constitution</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>receivership</td>\n",
+       "      <td>None</td>\n",
+       "      <td>474341</td>\n",
+       "      <td>https://www.wikidata.org/wiki/Q474341</td>\n",
+       "      <td>(Administration)</td>\n",
+       "      <td>Administration</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1019,20 +1056,26 @@
        "</div>"
       ],
       "text/plain": [
-       "     year           type           Entity     tag  Wikidata_id  \\\n",
-       "428  2007  Press release    The Statement    None      1272835   \n",
-       "428  2007  Press release      John McCain  PERSON        10390   \n",
-       "428  2007  Press release  Hillary Clinton  PERSON         6294   \n",
+       "     year           type            Entity   tag  Wikidata_id  \\\n",
+       "433  2009  Press release      Barack Obama  None           76   \n",
+       "443  2009  Press release          Stimulus  None      3559147   \n",
+       "450  2009  Press release              AARP   ORG       463410   \n",
+       "445  2009  News and blog  USS Constitution   LAW       944436   \n",
+       "448  2009  Press release      receivership  None       474341   \n",
        "\n",
-       "                               Wikidata_url                Span  \\\n",
-       "428  https://www.wikidata.org/wiki/Q1272835         (Statement)   \n",
-       "428    https://www.wikidata.org/wiki/Q10390      (John, McCain)   \n",
-       "428     https://www.wikidata.org/wiki/Q6294  (Hillary, Clinton)   \n",
+       "                               Wikidata_url              Span       Span_text  \\\n",
+       "433       https://www.wikidata.org/wiki/Q76           (Obama)           Obama   \n",
+       "443  https://www.wikidata.org/wiki/Q3559147        (Stimulus)        Stimulus   \n",
+       "450   https://www.wikidata.org/wiki/Q463410            (AARP)            AARP   \n",
+       "445   https://www.wikidata.org/wiki/Q944436    (Constitution)    Constitution   \n",
+       "448   https://www.wikidata.org/wiki/Q474341  (Administration)  Administration   \n",
        "\n",
-       "           Span_text  Count  \n",
-       "428        Statement      1  \n",
-       "428      John McCain      1  \n",
-       "428  Hillary Clinton      1  "
+       "     Count  \n",
+       "433      3  \n",
+       "443      2  \n",
+       "450      2  \n",
+       "445      2  \n",
+       "448      1  "
       ]
      },
      "execution_count": 16,
