--- a/ngrams.ipynb
+++ b/ngrams.ipynb
@@ -257,6 +257,10 @@
     "    sheet_name=using_dataset[\"sheet_name\"], \n",
     "    usecols=using_dataset[\"usecols\"]\n",
     ")\n",
+    "\n",
+    "# Removing 2007 and 2008 years because little data in them\n",
+    "dataset_df = dataset_df[~(dataset_df[using_dataset[\"year_col\"]] == 2007) & ~(dataset_df[using_dataset[\"year_col\"]] == 2008)]\n",
+    "\n",
     "dataset_df.head()"
    ]
   },
@@ -458,46 +462,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>troops</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1</td>\n",
-       "      <td>senator</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1</td>\n",
-       "      <td>withdrawal</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>1</td>\n",
-       "      <td>surge</td>\n",
-       "      <td>2</td>\n",
+       "      <td>would</td>\n",
+       "      <td>57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
+       "      <th>18</th>\n",
        "      <td>1</td>\n",
-       "      <td>new</td>\n",
-       "      <td>2</td>\n",
+       "      <td>health</td>\n",
+       "      <td>57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1</td>\n",
+       "      <td>bill</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1</td>\n",
+       "      <td>president</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1</td>\n",
+       "      <td>care</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    n  ngram_text  ngram_count\n",
-       "4   1      troops            3\n",
-       "6   1     senator            3\n",
-       "11  1  withdrawal            2\n",
-       "17  1       surge            2\n",
-       "20  1         new            2"
+       "    n ngram_text  ngram_count\n",
+       "17  1      would           57\n",
+       "18  1     health           57\n",
+       "22  1       bill           49\n",
+       "24  1  president           48\n",
+       "29  1       care           46"
       ]
      },
      "execution_count": 11,
@@ -542,46 +546,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>6</th>\n",
        "      <td>1</td>\n",
-       "      <td>statement</td>\n",
-       "      <td>1</td>\n",
+       "      <td>obama</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>9</th>\n",
        "      <td>1</td>\n",
-       "      <td>mccain</td>\n",
+       "      <td>administration</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
        "      <td>1</td>\n",
+       "      <td>stimulus</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1</td>\n",
+       "      <td>helping</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>1</td>\n",
-       "      <td>john</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1</td>\n",
-       "      <td>hillary</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1</td>\n",
-       "      <td>clinton</td>\n",
-       "      <td>1</td>\n",
+       "      <td>health</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    n ngram_text  ngram_count\n",
-       "4   1  statement            1\n",
-       "11  1     mccain            1\n",
-       "16  1       john            1\n",
-       "18  1    hillary            1\n",
-       "19  1    clinton            1"
+       "    n      ngram_text  ngram_count\n",
+       "6   1           obama            3\n",
+       "9   1  administration            3\n",
+       "10  1        stimulus            2\n",
+       "14  1         helping            2\n",
+       "16  1          health            2"
       ]
      },
      "execution_count": 12,
@@ -661,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -679,11 +683,15 @@
       "Error getting ngram counts\n",
       "empty vocabulary; perhaps the documents only contain stop words\n",
       "Error getting ngram counts\n",
+      "empty vocabulary; perhaps the documents only contain stop words\n",
+      "Error getting ngram counts\n",
       "empty vocabulary; perhaps the documents only contain stop words\n"
      ]
     }
    ],
    "source": [
+    "# Errors often happen for social media headlines\n",
+    "# because they mostly don't have headlines.\n",
     "for type, df in zip(types, types_dfs):\n",
     "    years, ngrams_text_years_dfs, ngrams_headline_years_dfs = get_ngram_years_dfs(df)\n",
     "\n",
