--- a/sentiment_analyzer.ipynb
+++ b/sentiment_analyzer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "1WcaVBZNwTYw"
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4   2017-05-04              2017  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,6 +198,10 @@
     "    sheet_name=using_dataset[\"sheet_name\"], \n",
     "    usecols=using_dataset[\"usecols\"]\n",
     ")\n",
+    "\n",
+    "# Removing 2007 and 2008 years because little data in them\n",
+    "dataset_df = dataset_df[~(dataset_df[using_dataset[\"year_col\"]] == 2007) & ~(dataset_df[using_dataset[\"year_col\"]] == 2008)]\n",
+    "\n",
     "dataset_df.head()"
    ]
   },
@@ -220,18 +224,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "id": "gwX0--jnJcwU"
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Adam\\AppData\\Local\\Python\\pythoncore-3.11-64\\Lib\\site-packages\\spacy\\util.py:969: UserWarning: [W095] Model 'en_core_web_md' (3.5.0) was trained with spaCy v3.5.0 and may not be 100% compatible with the current version (3.8.8). If you see errors or degraded performance, download a newer compatible model or retrain your custom model with the current spaCy version. For more details and available updates, run: python -m spacy validate\n",
+      "  warnings.warn(warn_msg)\n",
+      "c:\\Users\\Adam\\AppData\\Local\\Python\\pythoncore-3.11-64\\Lib\\site-packages\\coreferee\\manager.py:11: UserWarning: pkg_resources is deprecated as an API. See https://setuptools.pypa.io/en/latest/pkg_resources.html. The pkg_resources package is slated for removal as early as 2025-11-30. Refrain from using this package or pin to Setuptools<81.\n",
+      "  import pkg_resources\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "<spacytextblob.spacytextblob.SpacyTextBlob at 0x1d8425254d0>"
+       "<spacytextblob.spacytextblob.SpacyTextBlob at 0x226bc3623d0>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "id": "pEzymS6oJZCl"
    },
@@ -384,7 +398,7 @@
        "4  (WASHINGTON, ,, DC,  , The, House, of, Represe...  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +560,7 @@
        "4  (WASHINGTON, ,, DC,  , The, House, of, Represe... -0.046510      0.418955  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -606,17 +620,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
+       "      <th>433</th>\n",
        "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>https://www.johnmccain.com/Informing/News/Pres...</td>\n",
-       "      <td>\"On Monday, Senator Clinton told an audience a...</td>\n",
-       "      <td>Statement By John McCain on Hillary Clinton</td>\n",
+       "      <td>https://bachmann.house.gov/News/DocumentSingle...</td>\n",
+       "      <td>Washington, D.C., Mar 25 - In response to sugg...</td>\n",
+       "      <td>Bachmann Demands Truth: Will Obama Administrat...</td>\n",
        "      <td>Press release</td>\n",
-       "      <td>2007-08-23</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>(\", On, Monday, ,, Senator, Clinton, told, an,...</td>\n",
-       "      <td>0.090702</td>\n",
-       "      <td>0.430372</td>\n",
+       "      <td>2009-03-25</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>(Washington, ,, D.C., ,, Mar, 25, -, In, respo...</td>\n",
+       "      <td>-0.002273</td>\n",
+       "      <td>0.178409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>434</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>https://healthcare.nationalreview.com/post/?q=...</td>\n",
+       "      <td>When most Americans talk about the need for he...</td>\n",
+       "      <td>Taxpayer-Funded Abortion Is Not Health-Care Re...</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2009-07-23</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>(When, most, Americans, talk, about, the, need...</td>\n",
+       "      <td>0.090897</td>\n",
+       "      <td>0.390104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>435</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>http://krugman.blogs.nytimes.com/2009/08/05/on...</td>\n",
+       "      <td>A number of people in the news analysis busine...</td>\n",
+       "      <td>One of these things is not like the other</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2009-08-05</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>(A, number, of, people, in, the, news, analysi...</td>\n",
+       "      <td>0.017545</td>\n",
+       "      <td>0.364272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>https://www.facebook.com/notes/1020383705144285/</td>\n",
+       "      <td>Yesterday President Obama responded to my stat...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Social media</td>\n",
+       "      <td>2009-08-13</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>(Yesterday, President, Obama, responded, to, m...</td>\n",
+       "      <td>0.124426</td>\n",
+       "      <td>0.503137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>https://jumpinginpools.blogspot.com/2009/01/mi...</td>\n",
+       "      <td>Secretary of Defense Robert Gates is extremely...</td>\n",
+       "      <td>Military to Pledge Oath To Obama, Not Constitu...</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2009-01-28</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>(Secretary, of, Defense, Robert, Gates, is, ex...</td>\n",
+       "      <td>0.013445</td>\n",
+       "      <td>0.387886</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -624,25 +690,49 @@
       ],
       "text/plain": [
        "                                          factcheckURL  \\\n",
-       "428  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "433  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "434  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "435  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "436  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "437  http://www.politifact.com/truth-o-meter/statem...   \n",
        "\n",
        "                                           originalURL  \\\n",
-       "428  https://www.johnmccain.com/Informing/News/Pres...   \n",
+       "433  https://bachmann.house.gov/News/DocumentSingle...   \n",
+       "434  https://healthcare.nationalreview.com/post/?q=...   \n",
+       "435  http://krugman.blogs.nytimes.com/2009/08/05/on...   \n",
+       "436   https://www.facebook.com/notes/1020383705144285/   \n",
+       "437  https://jumpinginpools.blogspot.com/2009/01/mi...   \n",
        "\n",
        "                                      originalBodyText  \\\n",
-       "428  \"On Monday, Senator Clinton told an audience a...   \n",
+       "433  Washington, D.C., Mar 25 - In response to sugg...   \n",
+       "434  When most Americans talk about the need for he...   \n",
+       "435  A number of people in the news analysis busine...   \n",
+       "436  Yesterday President Obama responded to my stat...   \n",
+       "437  Secretary of Defense Robert Gates is extremely...   \n",
        "\n",
-       "                                originalHeadline originalTextType  \\\n",
-       "428  Statement By John McCain on Hillary Clinton    Press release   \n",
+       "                                      originalHeadline originalTextType  \\\n",
+       "433  Bachmann Demands Truth: Will Obama Administrat...    Press release   \n",
+       "434  Taxpayer-Funded Abortion Is Not Health-Care Re...    News and blog   \n",
+       "435          One of these things is not like the other    News and blog   \n",
+       "436                                                NaN     Social media   \n",
+       "437  Military to Pledge Oath To Obama, Not Constitu...    News and blog   \n",
        "\n",
        "    originalDate  originalDateYear  \\\n",
-       "428   2007-08-23              2007   \n",
+       "433   2009-03-25              2009   \n",
+       "434   2009-07-23              2009   \n",
+       "435   2009-08-05              2009   \n",
+       "436   2009-08-13              2009   \n",
+       "437   2009-01-28              2009   \n",
        "\n",
        "                                                   doc  polarity  subjectivity  \n",
-       "428  (\", On, Monday, ,, Senator, Clinton, told, an,...  0.090702      0.430372  "
+       "433  (Washington, ,, D.C., ,, Mar, 25, -, In, respo... -0.002273      0.178409  \n",
+       "434  (When, most, Americans, talk, about, the, need...  0.090897      0.390104  \n",
+       "435  (A, number, of, people, in, the, news, analysi...  0.017545      0.364272  \n",
+       "436  (Yesterday, President, Obama, responded, to, m...  0.124426      0.503137  \n",
+       "437  (Secretary, of, Defense, Robert, Gates, is, ex...  0.013445      0.387886  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -660,21 +750,21 @@
    "source": [
     "## Create summary table\n",
     "Next we create a summary table containing the following information for each year:\n",
-    "* pol_max: highest polarity\n",
-    "* pol_min: lowest polarity\n",
-    "* pol_avg: average polarity\n",
+    "* polarity_max: highest polarity\n",
+    "* polarity_min: lowest polarity\n",
+    "* polarity_avg: average polarity\n",
     "* intensity_avg: average of sentiment scores, ignoring polarity (i.e. average taking absolute values)\n",
-    "* subj_max: highest subjectivity\n",
-    "* subj_min: lowest subjectivity\n",
-    "* subj_avg: average subjectivity\n",
-    "* pos_article_count: total number of articles with polarity > 0\n",
-    "* neg_article_count: total number of articles with polarity < 0\n",
-    "* neu_article_count: total number of articles with polairity = 0"
+    "* subjectivity_max: highest subjectivity\n",
+    "* subjectivity_min: lowest subjectivity\n",
+    "* subjectivity_avg: average subjectivity\n",
+    "* positive_article_count: total number of articles with polarity > 0\n",
+    "* negative_article_count: total number of articles with polarity < 0\n",
+    "* neutral_article_count: total number of articles with polairity = 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -735,32 +825,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2007</th>\n",
-       "      <td>0.090702</td>\n",
-       "      <td>0.090702</td>\n",
-       "      <td>0.090702</td>\n",
-       "      <td>0.090702</td>\n",
-       "      <td>0.430372</td>\n",
-       "      <td>0.430372</td>\n",
-       "      <td>0.430372</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2008</th>\n",
-       "      <td>0.137623</td>\n",
-       "      <td>0.040781</td>\n",
-       "      <td>0.093760</td>\n",
-       "      <td>0.093760</td>\n",
-       "      <td>0.500413</td>\n",
-       "      <td>0.355412</td>\n",
-       "      <td>0.428801</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>2009</th>\n",
        "      <td>0.237596</td>\n",
@@ -841,16 +905,16 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2015</th>\n",
-       "      <td>0.071380</td>\n",
-       "      <td>-0.059205</td>\n",
-       "      <td>0.024961</td>\n",
-       "      <td>0.048351</td>\n",
-       "      <td>0.485483</td>\n",
-       "      <td>0.261404</td>\n",
-       "      <td>0.381924</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.246599</td>\n",
+       "      <td>-0.475000</td>\n",
+       "      <td>0.017919</td>\n",
+       "      <td>0.084202</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.399886</td>\n",
+       "      <td>28</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016</th>\n",
@@ -897,49 +961,43 @@
       ],
       "text/plain": [
        "      polarity_max  polarity_min  polarity_avg  intensity_avg  \\\n",
-       "2007      0.090702      0.090702      0.090702       0.090702   \n",
-       "2008      0.137623      0.040781      0.093760       0.093760   \n",
        "2009      0.237596     -0.044249      0.070177       0.075650   \n",
        "2010      0.375714     -0.094980      0.095071       0.110616   \n",
        "2011      0.255000     -0.330000      0.075608       0.103913   \n",
        "2012      0.206056     -0.054745      0.079749       0.088951   \n",
        "2013      0.250000     -0.262500      0.061929       0.089990   \n",
        "2014      0.500000     -0.087500      0.082586       0.093524   \n",
-       "2015      0.071380     -0.059205      0.024961       0.048351   \n",
+       "2015      0.246599     -0.475000      0.017919       0.084202   \n",
        "2016      0.800000     -0.700000      0.082629       0.119154   \n",
        "2017      0.737500     -1.000000      0.045831       0.117952   \n",
        "2018      0.540000     -0.500000      0.055117       0.118204   \n",
        "\n",
        "      subjectivity_max  subjectivity_min  subjectivity_avg  \\\n",
-       "2007          0.430372          0.430372          0.430372   \n",
-       "2008          0.500413          0.355412          0.428801   \n",
        "2009          0.607064          0.178409          0.416238   \n",
        "2010          0.608172          0.303333          0.442185   \n",
        "2011          0.628070          0.281120          0.436895   \n",
        "2012          0.594855          0.312187          0.463587   \n",
        "2013          0.637500          0.000000          0.382729   \n",
        "2014          0.700000          0.000000          0.415251   \n",
-       "2015          0.485483          0.261404          0.381924   \n",
+       "2015          1.000000          0.000000          0.399886   \n",
        "2016          1.000000          0.000000          0.425452   \n",
        "2017          1.000000          0.000000          0.415415   \n",
        "2018          0.900000          0.000000          0.449506   \n",
        "\n",
        "      positive_article_count  negative_article_count  neutral_article_count  \n",
-       "2007                       1                       0                      0  \n",
-       "2008                       5                       0                      0  \n",
        "2009                      15                       2                      0  \n",
        "2010                      20                       3                      0  \n",
        "2011                      37                       7                      0  \n",
        "2012                      23                       5                      0  \n",
        "2013                      47                      10                      4  \n",
        "2014                      24                       8                      2  \n",
-       "2015                       4                       2                      0  \n",
+       "2015                      28                       9                      5  \n",
        "2016                      66                      19                      6  \n",
        "2017                     145                      55                     23  \n",
        "2018                      84                      35                      3  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1159,7 @@
        "7  (COSTA, MESA, ,, Orange, County,  , It, was, a...  0.146143      0.455828  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1122,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
