--- a/quote_extraction.ipynb
+++ b/quote_extraction.ipynb
@@ -173,6 +173,10 @@
     "    using_dataset[\"input_path\"], \n",
     "    sheet_name=using_dataset[\"sheet_name\"], \n",
     "    usecols=using_dataset[\"usecols\"])\n",
+    "\n",
+    "# Removing 2007 and 2008 years because little data in them\n",
+    "dataset_df = dataset_df[~(dataset_df[using_dataset[\"year_col\"]] == 2007) & ~(dataset_df[using_dataset[\"year_col\"]] == 2008)]\n",
+    "\n",
     "dataset_df.head()"
    ]
   },
@@ -662,46 +666,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>428</th>\n",
+       "      <th>433</th>\n",
        "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>https://www.johnmccain.com/Informing/News/Pres...</td>\n",
-       "      <td>\"On Monday, Senator Clinton told an audience a...</td>\n",
-       "      <td>Statement By John McCain on Hillary Clinton</td>\n",
+       "      <td>https://bachmann.house.gov/News/DocumentSingle...</td>\n",
+       "      <td>Washington, D.C., Mar 25 - In response to sugg...</td>\n",
+       "      <td>Bachmann Demands Truth: Will Obama Administrat...</td>\n",
        "      <td>Press release</td>\n",
-       "      <td>2007-08-23</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>that the surge of troops in Iraq was 'working</td>\n",
+       "      <td>2009-03-25</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>\"Yesterday, during a Financial Services Commit...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.113725</td>\n",
+       "      <td>0.329412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>433</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>https://bachmann.house.gov/News/DocumentSingle...</td>\n",
+       "      <td>Washington, D.C., Mar 25 - In response to sugg...</td>\n",
+       "      <td>Bachmann Demands Truth: Will Obama Administrat...</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2009-03-25</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>he was open to supporting it</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.023529</td>\n",
+       "      <td>0.329412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>433</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>https://bachmann.house.gov/News/DocumentSingle...</td>\n",
+       "      <td>Washington, D.C., Mar 25 - In response to sugg...</td>\n",
+       "      <td>Bachmann Demands Truth: Will Obama Administrat...</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2009-03-25</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>the President is principally responsible for t...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0.05098</td>\n",
+       "      <td>0.329412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>433</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>https://bachmann.house.gov/News/DocumentSingle...</td>\n",
+       "      <td>Washington, D.C., Mar 25 - In response to sugg...</td>\n",
+       "      <td>Bachmann Demands Truth: Will Obama Administrat...</td>\n",
+       "      <td>Press release</td>\n",
+       "      <td>2009-03-25</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>\"And President Obama gave the nation the same ...</td>\n",
+       "      <td>36</td>\n",
+       "      <td>0.141176</td>\n",
+       "      <td>0.329412</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>434</th>\n",
+       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
+       "      <td>https://healthcare.nationalreview.com/post/?q=...</td>\n",
+       "      <td>When most Americans talk about the need for he...</td>\n",
+       "      <td>Taxpayer-Funded Abortion Is Not Health-Care Re...</td>\n",
+       "      <td>News and blog</td>\n",
+       "      <td>2009-07-23</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>health-care legislation should include expande...</td>\n",
        "      <td>9</td>\n",
-       "      <td>0.071429</td>\n",
-       "      <td>0.777778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>https://www.johnmccain.com/Informing/News/Pres...</td>\n",
-       "      <td>\"On Monday, Senator Clinton told an audience a...</td>\n",
-       "      <td>Statement By John McCain on Hillary Clinton</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>2007-08-23</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>the surge 'has failed' and that we should 'beg...</td>\n",
-       "      <td>15</td>\n",
-       "      <td>0.119048</td>\n",
-       "      <td>0.777778</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>428</th>\n",
-       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>https://www.johnmccain.com/Informing/News/Pres...</td>\n",
-       "      <td>\"On Monday, Senator Clinton told an audience a...</td>\n",
-       "      <td>Statement By John McCain on Hillary Clinton</td>\n",
-       "      <td>Press release</td>\n",
-       "      <td>2007-08-23</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>\"The fact that the New York senator can revers...</td>\n",
-       "      <td>74</td>\n",
-       "      <td>0.587302</td>\n",
-       "      <td>0.777778</td>\n",
+       "      <td>0.010405</td>\n",
+       "      <td>0.068208</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -709,39 +741,53 @@
       ],
       "text/plain": [
        "                                          factcheckURL  \\\n",
-       "428  http://www.politifact.com/truth-o-meter/statem...   \n",
-       "428  http://www.politifact.com/truth-o-meter/statem...   \n",
-       "428  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "433  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "433  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "433  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "433  http://www.politifact.com/truth-o-meter/statem...   \n",
+       "434  http://www.politifact.com/truth-o-meter/statem...   \n",
        "\n",
        "                                           originalURL  \\\n",
-       "428  https://www.johnmccain.com/Informing/News/Pres...   \n",
-       "428  https://www.johnmccain.com/Informing/News/Pres...   \n",
-       "428  https://www.johnmccain.com/Informing/News/Pres...   \n",
+       "433  https://bachmann.house.gov/News/DocumentSingle...   \n",
+       "433  https://bachmann.house.gov/News/DocumentSingle...   \n",
+       "433  https://bachmann.house.gov/News/DocumentSingle...   \n",
+       "433  https://bachmann.house.gov/News/DocumentSingle...   \n",
+       "434  https://healthcare.nationalreview.com/post/?q=...   \n",
        "\n",
        "                                      originalBodyText  \\\n",
-       "428  \"On Monday, Senator Clinton told an audience a...   \n",
-       "428  \"On Monday, Senator Clinton told an audience a...   \n",
-       "428  \"On Monday, Senator Clinton told an audience a...   \n",
+       "433  Washington, D.C., Mar 25 - In response to sugg...   \n",
+       "433  Washington, D.C., Mar 25 - In response to sugg...   \n",
+       "433  Washington, D.C., Mar 25 - In response to sugg...   \n",
+       "433  Washington, D.C., Mar 25 - In response to sugg...   \n",
+       "434  When most Americans talk about the need for he...   \n",
        "\n",
-       "                                originalHeadline originalTextType  \\\n",
-       "428  Statement By John McCain on Hillary Clinton    Press release   \n",
-       "428  Statement By John McCain on Hillary Clinton    Press release   \n",
-       "428  Statement By John McCain on Hillary Clinton    Press release   \n",
+       "                                      originalHeadline originalTextType  \\\n",
+       "433  Bachmann Demands Truth: Will Obama Administrat...    Press release   \n",
+       "433  Bachmann Demands Truth: Will Obama Administrat...    Press release   \n",
+       "433  Bachmann Demands Truth: Will Obama Administrat...    Press release   \n",
+       "433  Bachmann Demands Truth: Will Obama Administrat...    Press release   \n",
+       "434  Taxpayer-Funded Abortion Is Not Health-Care Re...    News and blog   \n",
        "\n",
        "    originalDate  originalDateYear  \\\n",
-       "428   2007-08-23              2007   \n",
-       "428   2007-08-23              2007   \n",
-       "428   2007-08-23              2007   \n",
+       "433   2009-03-25              2009   \n",
+       "433   2009-03-25              2009   \n",
+       "433   2009-03-25              2009   \n",
+       "433   2009-03-25              2009   \n",
+       "434   2009-07-23              2009   \n",
        "\n",
        "                                                 quote num_words  \\\n",
-       "428      that the surge of troops in Iraq was 'working         9   \n",
-       "428  the surge 'has failed' and that we should 'beg...        15   \n",
-       "428  \"The fact that the New York senator can revers...        74   \n",
+       "433  \"Yesterday, during a Financial Services Commit...        29   \n",
+       "433                       he was open to supporting it         6   \n",
+       "433  the President is principally responsible for t...        13   \n",
+       "433  \"And President Obama gave the nation the same ...        36   \n",
+       "434  health-care legislation should include expande...         9   \n",
        "\n",
        "    proportion_of_total_words  proportion_quote_words_to_total_words  \n",
-       "428                  0.071429                               0.777778  \n",
-       "428                  0.119048                               0.777778  \n",
-       "428                  0.587302                               0.777778  "
+       "433                  0.113725                               0.329412  \n",
+       "433                  0.023529                               0.329412  \n",
+       "433                   0.05098                               0.329412  \n",
+       "433                  0.141176                               0.329412  \n",
+       "434                  0.010405                               0.068208  "
       ]
      },
      "execution_count": 9,
@@ -994,61 +1040,51 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2007</td>\n",
-       "      <td>3.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2008</td>\n",
-       "      <td>9.800000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>2009</td>\n",
        "      <td>6.176471</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>2010</td>\n",
        "      <td>4.217391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>2</th>\n",
        "      <td>2011</td>\n",
        "      <td>3.954545</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>3</th>\n",
        "      <td>2012</td>\n",
        "      <td>5.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>4</th>\n",
        "      <td>2013</td>\n",
        "      <td>3.327869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <th>5</th>\n",
        "      <td>2014</td>\n",
        "      <td>3.911765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>6</th>\n",
        "      <td>2015</td>\n",
        "      <td>3.714286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>7</th>\n",
        "      <td>2016</td>\n",
        "      <td>3.252747</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <th>8</th>\n",
        "      <td>2017</td>\n",
        "      <td>2.910314</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <th>9</th>\n",
        "      <td>2018</td>\n",
        "      <td>3.491803</td>\n",
        "    </tr>\n",
@@ -1057,19 +1093,17 @@
        "</div>"
       ],
       "text/plain": [
-       "    year  proportion_num_quotes_to_num_articles\n",
-       "0   2007                               3.000000\n",
-       "1   2008                               9.800000\n",
-       "2   2009                               6.176471\n",
-       "3   2010                               4.217391\n",
-       "4   2011                               3.954545\n",
-       "5   2012                               5.714286\n",
-       "6   2013                               3.327869\n",
-       "7   2014                               3.911765\n",
-       "8   2015                               3.714286\n",
-       "9   2016                               3.252747\n",
-       "10  2017                               2.910314\n",
-       "11  2018                               3.491803"
+       "   year  proportion_num_quotes_to_num_articles\n",
+       "0  2009                               6.176471\n",
+       "1  2010                               4.217391\n",
+       "2  2011                               3.954545\n",
+       "3  2012                               5.714286\n",
+       "4  2013                               3.327869\n",
+       "5  2014                               3.911765\n",
+       "6  2015                               3.714286\n",
+       "7  2016                               3.252747\n",
+       "8  2017                               2.910314\n",
+       "9  2018                               3.491803"
       ]
      },
      "execution_count": 12,
@@ -1153,7 +1187,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_27768\\505514796.py:6: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
+      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_26512\\505514796.py:6: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
       "  proportions_df.to_excel(writer, \"Num Quotes Proportions\", index=False)\n"
      ]
     }
@@ -1179,11 +1213,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_27768\\3104340073.py:12: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
+      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_26512\\3104340073.py:12: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
       "  proportions_df.to_excel(writer, \"Num Quotes Proportions\", index=False)\n",
-      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_27768\\3104340073.py:12: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
+      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_26512\\3104340073.py:12: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
       "  proportions_df.to_excel(writer, \"Num Quotes Proportions\", index=False)\n",
-      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_27768\\3104340073.py:12: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
+      "C:\\Users\\Adam\\AppData\\Local\\Temp\\ipykernel_26512\\3104340073.py:12: FutureWarning: Starting with pandas version 3.0 all arguments of to_excel except for the argument 'excel_writer' will be keyword-only.\n",
       "  proportions_df.to_excel(writer, \"Num Quotes Proportions\", index=False)\n"
      ]
     }
