Update sentiment analysis to work on headlines

--- a/ngrams.ipynb
+++ b/ngrams.ipynb
@@ -84,18 +84,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "fakespeak_config = BASE_FAKESPEAK_CONFIG | {\n",
-    "    \"headline_col\": \"originalHeadline\",\n",
     "    \"usecols\": BASE_FAKESPEAK_CONFIG[\"usecols\"] + [\"originalHeadline\"]\n",
     "}\n",
     "\n",
-    "misinfotext_config = BASE_MISINFOTEXT_CONFIG | {\n",
-    "    \"headline_col\": \"originalHeadline\",\n",
-    "}"
+    "misinfotext_config = BASE_MISINFOTEXT_CONFIG"
    ]
   },
   {
