Add stats test for lexical density and diversity

--- a/all_caps_stats.ipynb
+++ b/all_caps_stats.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "3e17ab2c",
    "metadata": {},
    "outputs": [],
@@ -37,10 +37,7 @@
     "        \n",
     "        df = pd.read_excel(fakespeak_file, sheet_name=sheet)\n",
     "        df[\"year\"] = sheet\n",
-    "        yield df\n",
-    "\n",
-    "def get_full_df(misinfotext_path: str, fakespeak_path: str):\n",
-    "    return pd.concat(get_years_dfs(misinfotext_path, fakespeak_path))"
+    "        yield df"
    ]
   },
   {
